# BoardCrab

./: .gitignore  Cargo.toml  LICENSE
board_crab_vcmp/: Cargo.toml
board_crab_vcmp/src/: main.rs
data/: gm_fen_positions.txt  gm_opening_fens.txt
src/: async_engine.rs  bitmask.rs  board.rs  eval.rs  eval_lookup.rs  fen.rs  lib.rs  lookup_gen.rs  lookup_gen_magic.rs  main.rs  move_gen.rs  pgn.rs  raw_ptr.rs  search.rs  thread_flag.rs  time_manager.rs  transpos.rs  uci.rs  zobrist.rs
tests/: continuity_tests.rs  perft_tests.rs  search_consistency_tests.rs
