[package]
name = "board_crab_vcmp"
version = "0.1.0"
edition = "2021"

[dependencies]
board_crab = {path = "../"} # Includes BoardCrab from the parent directory
rand = "0.9.0"
statrs = "0.18.0"

[profile.dev]
overflow-checks = false

[profile.bench]
overflow-checks = false

[profile.release]
overflow-checks = false